Fixed the footer not being aligned properly at the bottom

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ footer{
     background-color: #F2F2F2;
     width: 100vw;
     position: absolute;
-    height: 8.7vh;
+    
     bottom: 0vh;
 }
 
